[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/ShowPicture.gd" type="Script" id=1]
[ext_resource path="res://textures/wallpapers/wallpaper0.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/big_match_35.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=1]

resource/name = "show_pic"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pic:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 660, 230 ), Vector2( 60, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pic:rect/size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 70 ), Vector2( 1170, 630 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pic:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="ShowPicture" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
script/script = ExtResource( 1 )

[node name="pic" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 40.0
margin/right = 1230.0
margin/bottom = 670.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="btn_close" type="Button" parent="pic"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = -28.0
margin/bottom = -16.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="show_pic" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show_pic = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="pic/btn_close" to="." method="_on_btn_close_pressed"]

[connection signal="finished" from="show_pic" to="." method="_on_show_pic_finished"]


